# dnpatterntools

./: README.rst  tutorial.md
R/: apo-ft.csv  apo-pat.csv  cd4-cor.csv  mouse-ft.csv  mouse-orig.csv  plots.R
core/src/: CMakeLists.txt  README.txt  diprofile.cpp
data/: TT.c  TT.f  TT.fc  seq25000.di.corr.profiles  seq25000.di.freq.selection.profiles  seq25000.di.freq.selection.symmetrized.composites.profiles  seq25000.di.freq.selection.symmetrized.profiles
docker/: Dockerfile  dnpatterntools.yml
examples/: call_binary_strings.sh  call_binstrings.sh  call_compute_composite.sh  call_correlation_between_profiles.sh  call_corrprofile.sh  call_diprofile.sh  call_fourier_transform.sh  call_select_range.sh  call_shuffle_sequences.sh  call_smooth.sh  call_subset_dinuc_profile.sh  call_symmetrize.sh
galaxy-to-submit/: binary_strings.sh  binary_strings.xml  correlation_between_profiles.sh  planemo_binary_strings.sh  smooth.xml  tool_conf.xml.sample
helper/: binary_strings.sh  correlation_between_profiles.sh  fourier_transform.sh  plot_selected.sh  shuffle_sequences.sh  subset_dinuc_profile.sh
mapping/: largefunctionsforoccupancy.R  mappingoccupancystrings.R  mptable.csv  patterns.csv
mouse-fasta/: README.txt
periods/: cmd.sh  header  p10bp.csv  period_stats.R  period_stats.csv  samplingPeriods.sh
shell-scripts/: compute_composite.sh  fourier_transform.sh  smooth.sh  subset_dinuc_profile.sh  (+1 more)
source/: CMakeLists.txt  Makefile  README.txt  binstrings.cpp  corrprofile.cpp
source/help/: dnp-binstrings.txt  dnp-corrprofile.txt  dnp-diprofile.txt  dnp-fourier.txt
(+215 files in other folders)
